<resources>
    <string name="app_name">Final_Rider_Uber</string>
    <string name="register_text">Let\'s start with creating your account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="title_activity_maps">Map</string>

    <string name="star">star</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_rider_home">RiderHomeActivity</string>
    <string name="permisson_require">Location permission Require</string>
    <string name="drivers_not_found">Driver not found</string>
    <string name="key_no_found"> Key not found</string>
    <string name="wellcome">Wellcome</string>
    <string name="choose_a_saved_place">Choose a saved place</string>
    <string name="where_to">Where to?</string>
    <string name="city_name_empty">City Name Empty</string>
    <string name="help">Help</string>
    <string name="history">Your Trip</string>
    <string name="title_activity_request_driver">Map</string>
    <string name="central_park">Central Park</string>
    <string name="pay_by_cash">Pay by Cash</string>
    <string name="confirm_uber">Confirm Uber</string>
    <string name="confitm_pickup_spot">Confirm Pickup Spot</string>
    <string name="demo_address">127/15 le thuc hoach VN</string>
    <string name="meet_driver_here">Meet Driver here</string>
    <string name="finding_your_driver">Finding your Driver</string>
    <string name="token_not_found">Token Not Found</string>
    <string name="request_driver_failed">Failed to send request to Driver</string>

    <string name="motaxigo">MotaxiGo</string>
    <string name="get_in_the_car_and_feel_the_live">Get in the car and enjoy your ride</string>
    <string name="version">v 0.0.1</string>
    <string name="There_are_no_driver_accpect_request">There are no driver accpect request</string>
    <string name="trip_not_found">Trip not found</string>
    <string name="car_type">Kia Morning</string>
    <string name="car_number">59F-65-12912</string>
    <string name="driver_name">Hermes Khong</string>
    <string name="ascii_dot">■</string>
    <string name="know">Knows English</string>
    <string name="trip_complete">Trip Complete Successfully</string>
    <string name="lets_me_know_if_you_like_your_trip_nwe_hope_to_see_you_again">Lets me know if you like your Trip. \nWe hope to see you again!!</string>
</resources>