<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/driver_info_layout"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/car_display"
                    android:layout_marginLeft="50dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_driver"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_baseline_account_circle_24"/>




            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/txt_car_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:text="@string/car_type"/>

                <TextView
                    android:id="@+id/txt_car_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:text="@string/car_number"/>


            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="@dimen/activity_margin"
                android:paddingLeft="@dimen/activity_margin">

                <TextView
                    android:id="@+id/txt_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/uber_move_bold"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:text="@string/driver_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/uber_move_bold"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/ascii_dot"/>

                <TextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableRight="@drawable/ic_baseline_star_rate_24"
                    android:fontFamily="@font/uber_move"
                    android:text="4.50"
                    android:textColor="#737373"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/uber_move_bold"
                    android:textColor="#737373"
                    android:textSize="14sp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/ascii_dot"/>

                <TextView
                    android:id="@+id/txt_foreign_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/uber_move"
                    android:textColor="#737373"
                    android:textSize="16sp"
                    android:text="@string/know"/>

                <ImageView
                    android:id="@+id/img_phone_call"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_phone_black_24"/>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:layout_weight="12">

                <ImageView
                    android:id="@+id/img_call_driver"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_phone_black_24"/>

                <EditText
                    android:id="@+id/edt_note"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:hint="Any pickup Notes"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_toRightOf="@id/img_call_driver"/>
                
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_wb_sunny_24"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>